--- a/_posts/thesis_chapters/2024-3-4-Design.md
+++ b/_posts/thesis_chapters/2024-3-4-Design.md
@@ -128,12 +128,12 @@ title: 4. Exploration of the Formative Learning Design Process
 
 ~1. What pedagogical tools and processes are available to support novices to overcome barriers to participation in game coding processes?~
 
-1. What ~barriers~ area of contradictions arose in participation in this research's game coding processes and what pedagogical tools and processes are available to address these contradictions?
+1. What ~barriers~ areas of contradictions arose in participation in this research's game coding processes and what pedagogical tools and processes are available to address these contradictions?
 2. How can game design patterns support the development of coding practices with novices?
 3. How can learners build agency in an evolving community of game makers?
 
 
-## A note on style
+*A note on style*
 
 This chapter contains a large number of headings in draft form. These will be replaced with introductory sentences when structure is stable.
 
@@ -174,33 +174,17 @@ Firstly, I describe phases of delivery of the formative intervention in the form
 
 
 
+## Summary of phases and resources of the study
 
 
-## Summary of design evolution
-
-This chapter which is a rich description of the evolution of the learning design.
-
-This section summarises phases of design.
-
-
-### On the details of the design
-
-
-### Phases and resources of the study
-
-More than a design the result was a dynamic community which is analysed on several scopes of activity.
-
-The following overview of activity use by stage focusing on the evolution of tools and processes concisely exploring the rationale for their selection or production. Fuller descriptions of the tools used at each stage and links to the online resources created are available as appendix 4.x
-
-NOTE - PERHAPS Move to appendix - But mention here.
+The following overview of activity use by phase briefly details the evolution of tools and processes. Later sections of chapter explore the rationale for their selection or production. Fuller descriptions of the tools and supporting resources used at each stage and links to the online resources created are available as appendix 4.x
 
 ![](./Pictures/phases_diagram_chevrons.png){width=90%}
 
 Fig. 4.x Summary of delivery phases and development periods
 
-
-
-[Summary Table of Stages](https://docs.google.com/document/d/1tBoXJWw-aZUcc8EsAvT195CtHLSM468YOCD0sGzOuoA/edit#)
+<!-- NOTE
+[Summary Table of Stages](https://docs.google.com/document/d/1tBoXJWw-aZUcc8EsAvT195CtHLSM468YOCD0sGzOuoA/edit#) -->
 
 
 
@@ -383,8 +367,7 @@ Subsequent analysis of the identified activity systems allows both the researche
 
 ### Environmental factors and objectives
 
-In socio-cultural approaches is it important to situate the context of the learning environment within wider systems of activity. In line with Engestrom's concept of shared object explored in the previous chapter [@engestrom_expansive_2001],
-several relevant systems and represented them in an illustration 4.x  below. The diagram is necessary simplification of contextual factors and objectives of interacting, focusing on research goals on the part of the researcher, learning computing skills and concepts as a home education project and finally a broad aim of fun on the part of the children participants. Diverse cultural and contextual factors from the original activity systems are played out in a new shared activity system, while there is a nominal shared objective to the main activity, it the community contains diverse actors with different agendas.
+The context of the learning environment situated within wider systems of activity. Three key systems are represented in an illustration 4.x  below. The diagram is necessary simplification of contextual factors and objectives of interacting, focusing on research goals on the part of the researcher, learning computing skills and concepts as a home education project and finally a broad aim of fun on the part of the children participants. Diverse cultural and contextual factors from the original activity systems are played out in a new shared activity system, while there is a nominal shared objective to the main activity, it the community contains diverse actors with different agendas.
 
 
 <!--
@@ -395,9 +378,7 @@ Other relevant objectives of re include: a desire to create a useful learning ex
 
 ![Illustration 4.x - Broad Environmental Activity Systems  ](./Pictures/At_dia_3_v2.png){width=95%}
 
-In this research I take the approach of treating this shared object as an activity system in its own right. Lecusay takes a similar approach [@lecusay_telementoring_2015] and describes the shared object as an ideocultural hybrid which develops into its own activity system. The concept of ideoculture is used in this study  to deepen the description of the community dimension of 3GAT.
-
-
+The diagram is in line with Engestrom's concept of expansive learning via a shared object (explored in the chapter three) [@engestrom_expansive_2001]. In this research, I take the approach of treating this shared object as an activity system in its own right. Lecusay takes a similar approach [@lecusay_telementoring_2015] when describing an adaption to an after school program. He describes the shared object as an idiocultural hybrid which develops into its own activity system. The concept of idioculture is used in this study  to deepen the description of the community dimension of 3GAT.
 
 
 <!-- NOTE - WHY IS THE CONCEPT OF IDEOCULTURE USEFUL HERE? -->
@@ -425,7 +406,7 @@ Following Barab's description of nested activity systems [-@barab_using_2002], t
 
 <!-- GDPs ( conceptualised here as game design patterns), which while often implemented on an individual or pair scope, were also fed back into community activity.  -->
 
-### Broader activity system - a novice game making community making games as a learning experience
+###  Activity system 1 - a novice game making community making games as a learning experience
 
 
 <!-- NOTE - what is the difference between objective and outcome -->
@@ -446,15 +427,17 @@ While the broad aim of making a game to share is agreed through participation, t
 
 
 The purpose of this vignette is to illustrate some of the key features of the overall game making activity in relation to activity systems and relevant system elements. (included as an appendix of this chapter as Appendix 4.a -
-[Link to online version here](https://docs.google.com/document/d/1vYeVxYaRMTWPDOHwC4DEGYAkGPRIDX7wLiz0l8b7LWc/edit))
+
+<!--
+[Link to online version here](https://docs.google.com/document/d/1vYeVxYaRMTWPDOHwC4DEGYAkGPRIDX7wLiz0l8b7LWc/edit)) -->
 
 The participant, a child Toby, has been working independently on the design of a platform game for several minutes of the session. As a facilitator, I draw the participants attention to the showcasing of their games to an external audience to focus their attention on completion of their games. Toby pays close attention to the challenge and variety of the game playing experience for his imagined audience of players. During the course of the session Toby invites many other group members to play his game. He initiates and responds to conversations around the difficultly of the game he has designed. The more immediate audience of his peers is clearly important to him in guiding his actions.
 
-He uses a variety of tools in the process of coding and testing his game including: a web based coding tool (code playground), a game template which he has used as the base of his game project and,  a menu of documentation linking to code examples and tutorials test    
+He uses a variety of tools in the process of coding and testing his game including: a web based coding tool (code playground), a game template which he has used as the base of his game project and,  a menu of documentation linking to code examples and tutorials   
 
 While this vignette shows that the participant has developed fluid use of both software tools and documentation and support sources, these are areas where significant contradictions emerged which shaped the path of the support given. Contradictions concerned with use of core tools and additional documentation and support are explored in two later sections of this chapter.
 
-The later section of the vignette shows evidence of elements of an emerging ideoculture of this group. A student helper shares a question -  "Is yours the one where level one is harder than level three?". This is indicative of some of the emerging playful approaches that younger participants in particular are taking to the overall process. This represents an example of the influence of the wider systems of play of on the shared ideoculture of the game making commmunity. The complexities of processes to create adn to help resolve contradictions as this cultural domain of collective making are explored later in this chapter.
+The later section of the vignette shows evidence of elements of an emerging idioculture of this group. A student helper shares a question -  "Is yours the one where level one is harder than level three?". This is indicative of some of the emerging playful approaches that younger participants in particular are taking to the overall process. This represents an example of the influence of the wider systems of play of on the shared idioculture of the game making community. The complexities of processes to create and to help resolve contradictions as this cultural domain of collective making are explored later in this chapter.
 
 
 <!-- IS THIS NEEDED? While the programme had a shared objective of making a game, there were tensions brought by the cultural factors and other objectives imported from other activity systems. The third contradiction explored in this chapter explores those tensions (including? ....). -->
@@ -465,7 +448,7 @@ The later section of the vignette shows evidence of elements of an emerging ideo
 NOTE - More on large scope in AT terms? What is needed here? -->
 
 
-### Constructing a game feature by feature
+### Activity system 2 -  Constructing a game feature by feature
 
 Within the activity system of making a game, in analysis of video data and evolution of course resources from P2 onwards, I identified activity happening at an individual or pair work which emerged with distinctive characteristics.
 
@@ -504,22 +487,22 @@ By this stage, the process of collecting a user generated list of features and t
 
 <!-- Toby builds his competence in the process of comparing the own code to the code example to work out what code is new and relevant to the desired behaviour. -->
 
-
-Later in this chapter we examine in more detail the emergence of  game design patterns as shared concepts and the implications for activity in more depth. At this stage is it sufficient to stage that game design patterns emerged as a shared object as descbed by Engestrom in x.
-
-INSERT ENG'S DIAGRAM HERE FOR NOW - AND CALL BACK TO PREVIOUS CHAPTER.
-
-DEVELOP THIS IDEA HERE OR MOVE IT TO DISCUSSION WITH SOME KIND OF SIGNPOSTING HERE.
+Game design patterns emerged as a shared object as described by Engestrom in []. The object of activity here is not only the code and game assets which participants are working on. In addition the emerging concept and group understanding of the game design pattern becomes a share understanding on a community level as playtesing, pair work and peer help happens.
 
 ![Illustration 4.x - Shared object of implementing GDP  ](./Pictures/At_dia_4_v1.png){width=95%}
 
-This diagram above helps illustrates that the object of activity here is not only the code and game assets which participants are working on. In addition the emerging concept and group understanding of the game design pattern becomes a share understanding on a community level as playtesing, pair work and peer help happens.
+Chapter five contains more detail on the emergence of game design patterns as shared concepts and the implications for activity in more depth.
 
-Objectives at this level also vary between participants with some more straight-forward and others more tricky based on their making style. For example, beyond a purely utilitarian objective, a further objective in implementing a GDP, e.g. a new graphical element may be to increase a sense of personal identificaiton with the game as an vehicle for personal expression.  MOVE OR EXPLAIN
+<!-- DEVELOP THIS IDEA HERE OR MOVE IT TO DISCUSSION WITH SOME KIND OF SIGNPOSTING HERE. -->
 
-ALTER THE DIAGRAMS ABOVE TO REFLECT THIS.
+Objectives at this level also vary between participants with some more straight-forward and others more tricky based on their making style. For example, beyond a purely utilitarian objective, a further objective in implementing a GDP, e.g. a new graphical element may be to increase a sense of personal identification with the game as an vehicle for personal expression.  
 
-An illustrative example of the use of the diverse tool set merits a summary before further discussion in this chapter.  By this stage of the process, Toby is able to browse a collection of game design patterns and use diverse of tools, resources and processes. Participants developed preferred approaches and tool choices especially in accessing help when adding a new feature to their game. In the vignette 4.a I outline the two main sources of help at the level of adding a new feature to the game: "Here’s the tutorial and there’s the examples of code". In the course of the vignette above, Toby chose to access only a code example of the desired game behaviour. He did not, as some in the group were doing in this session, use the tutorial which provided more descriptive, step-by-step guidance. Other participants relied only on direct verbal help from myself or other participants (like Toby) to help them progress.
+<!-- MOVE OR EXPLAIN IN MORE DETAIL
+ALTER THE DIAGRAMS ABOVE TO REFLECT THIS. -->
+
+#### Illustrative use of tools to mediate activity shown in vignette 4.x
+
+A description of the use of the diverse tool set used at this level of activity illustrated in vignette 4.x is helpful to situate later discussion in this chapter.  By this stage of the process, Toby is able to browse a collection of game design patterns and use diverse of tools, resources and processes. Participants developed preferred approaches and tool choices especially in accessing help when adding a new feature to their game. In the vignette 4.a I outline the two main sources of help at the level of adding a new feature to the game: "Here’s the tutorial and there’s the examples of code". In the course of the vignette above, Toby chose to access only a code example of the desired game behaviour. He did not, as some in the group were doing in this session, use the tutorial which provided more descriptive, step-by-step guidance. Other participants relied only on direct verbal help from myself or other participants (like Toby) to help them progress.
 
 A later section of this chapter details the different supporting documentation guiding participation in game making practices. Chapter five then explores activity occurring at this scope in more detail with a greater focus on emerging concepts as tools.
 
@@ -543,7 +526,7 @@ A later section of this chapter details the different supporting documentation g
 
 <!-- Table 4.x.  Tools used in lower-level objectives of implementing specific code structures or stages in creating game assets -->
 
-### Smaller objectives and actions - Implementing discrete code and design structures
+#### Operations and actions within the system - Implementing discrete code and design structures
 
 <!-- For example, creating a new graphical element in a separate online pixel-art editor called Piskel, exporting and downloading it to the laptop, and uploading it to the glitch code playground and then making code changes in several parts of the code to initialise and implement new behaviour for this element. -->
 
@@ -1334,9 +1317,8 @@ An additional rationale for this process was to help reduce potential internal b
 
 ## C3 - Responding to tensions and barriers in cultural aspects of the game making activity
 
-**Narrative summary of conflict:**
 
-### Design narrative on conflict due to identity clashes and dysfunctional group work
+<!-- ### Design narrative on conflict due to identity clashes and dysfunctional group work -->
 
 <!-- **Participants stuck / demotivated : scope of ambition to high,  clashes of identity not hard core coders, no on-going playtesting, collaboration groups too big (transition),** -->
 
@@ -1404,8 +1386,8 @@ That week I had omitted them as I felt a sense of urgency coming from families t
 
 <!-- In this emergent design, they had mostly completed asset design and narrative development and the only coding remained. I thus wanted to address the tension between completing the project and alienation from just coding. -->
 
-### REMOVED
-COMPLETELY REMOVED SECTION ON PHYSICAL MAPS
+<!-- ### REMOVED
+COMPLETELY REMOVED SECTION ON PHYSICAL MAPS -->
 
 ### Playtesting as a cultural process
 
