editing - additions of narrative - from finding many sources as journals for p1 especially

--- a/_posts/thesis_chapters/2024-3-4-Design.md
+++ b/_posts/thesis_chapters/2024-3-4-Design.md
@@ -705,19 +705,22 @@ Activity theory has a broad definition of the concept of tool which in this cont
 
 
 
-### Narrative descriptions of shifts of tool use from P1 to P2
+### Narrative descriptions of shifts of tool use
 
-I had two tools in mind at the start of P1 but without a method of how to implement them or relevant supporting resources. They were Mozilla's code playground Thimble [], and a professional, open source, javascript library for web game making called Phaser.js. I had used Thimble in earlier work teaching javascript, a snapshot of which is available as PGCE dissertation [@chesterman_webmaking_2015].
+I had no idea how to code games at the start of this process. But I did have some experience of teaching web coding.
+
+Before engaging with families in P1 in August 2017 I followed tutorials on Mozilla's developer community website and made notes of what parts I found useful. I discovered I could use Mozilla's code playground Thimble [], to house a working javascript based game. Mozilla promoted a professional, open source, javascript library for web game making called Phaser.js. I had used Thimble in earlier work teaching javascript, a snapshot of which is available as PGCE dissertation [@chesterman_webmaking_2015].
+
+
 
 <!-- Thus crux of the conflict is that coding games to create a webpage using a text environment is a complex process. -->
 
-The process of helping participants build familiarity and competency in tool use was further complicated by my own motivations for working with as authentic as practical game authoring tools (explored in the introduction). With little structured support, and given the complexities of learning text based languages, significant areas of contradictions arose between the need of participants to use key tools to create games and their limited skills and experience in using them.
+
+My own motivations for working with open source, authentic game authoring tools (explored in the introduction) brought additional challenge to the process of helping participants build familiarity and competency in tool use compared to using a block coding approach.
+
+With little structured support, and given the complexities of learning text based languages, significant areas of contradictions arose between the need of participants to use key tools to create games and their limited skills and experience in using them. In response to that need, on the second session of P1, I adapted a starting code template of a platform game and created various code examples to add functionality requested by participants.
 
 <!-- In early stages, this gulf created a tension between the need to use the tools and text coding processes which often resulted in frustration and paralysis in the activity of game coding. -->
-
-
-Thus in response to need, several weeks in to P1, I adapted a starting code template of a platform game and created various code examples to add functionality requested by participants. This template was adapted from an online tutorial to create a game of the _platformer_ genre  (see glossary), a move which helped to limit expectations of the technical complexity of their game.
-
 <!-- At the end of this stage participants showcased their games to students in the foyer of the MMU Brooks building. -->
 
 
@@ -758,6 +761,8 @@ When the family withdrew, they shared in feedback (see appendix 4.x) the moment 
 ### Using a starter game template
 
 The initial use of a working structural template was based on my previous experience of teaching javascript to novices [@chesterman_webmaking_2015].
+
+This template was synthesised from several tutorial to create a game of the _platformer_ genre  (see glossary), a move which helped to limit expectations of the technical complexity of their game.
 
 The choice to pre-select a particular genre was initially a pragmatic response to tensions experienced in P1. When offering feedback to address her family's feeling of isolation from the coding process, the parent of the family described in part two of this section had more hands on play and use of the tools of production before being called on to make creative decision, likening this to an arts studio approach.
 
@@ -1172,11 +1177,9 @@ DEVELOP THIS SECTION -->
 
 **- Contradictions associated with project navigation and the use of supporting documentation - interpreted here through the lens of guided participation**
 
+In addition to the description of the tools in the section previously, there is a full description of tools and processes used in the phases included as table in appendix 3.x.
 
-PERHAPS INCLUDE TIMELINE OF DOCUMENTATION IN HERE -
-THERE IS AN EXTENDED TABLE IN APPENDIX 4.X
-
-### Narrative pm the evolution of resources during P2
+### Narrative on the evolution of resources during P2
 
 This section details a conflict where participants, frequently wanted to add new features or changes to their game but were not clear how to implement them. In P1 this caused delays and participant frustration, as although I could work with people directly to help them I had limited time with each participant or pair. The inability for participants progress due to lack of game and coding practices was compounded in early stages by little or no supporting documentation or supporting resources. This section outlines the evolutions and design choices informing the different forms of supporting documentation used to address this conflict.
 
@@ -1201,14 +1204,22 @@ SOME DISCUSSION MOVED TO CHAPTER 6 ALREADY - MOVE IT BACK HERE?
 <!-- Longer form step by step tutorials are common in computing education. Examples can be found in Code Academy, and in the education resources of RPi foundation. Many examples talking learners through steps to build a game can be found online with varied amount of explanation of underlying constructs and concepts. I started my journey learning JS games using some provided
 by Mozilla and the Phaser developers. -->
 
+
 ### Quick Start Cards
+
+NOTES: Created by students -
+
+In summer 2028 during I shared the fledging design with computer trainee teacher computing students as part of a subject knowledge enrichment programme. In response to a challenge to improve the design three students created printable word documents which highlighted key affordances of the design.
+
+Narrative of Js cards responding to delivering show case lessons to teacher trainers and in half term activities and more generally sharing the learning design.
 
 To address the limit of one-to-one facilitator support to seed the starting processes outlined in the section above, I used printable resources which highlighted the key lines of code and how they can be altered to impact on game behaviour(see figure 4.x below). These _quick start_ cards provoked a strongly scaffolded initial interaction with the code in a way strongly aligned with the use and modify stages of the UMC framework [@franklin_analysis_2020].
 
 ![](./Pictures/velocity_jscard.png){width=95%}
 4.x - Example of a Quick start card
 
-The quick start cares were created at the end of P1 by trainee computing teachers in my faculty who volunteered to support a holiday outreach event for young people. I developed them by theming them into starting level, next level and boss level. Participants were encouraged to pick a card based on their interest and difficulty level.  
+
+
 
 ### Code snippet examples
 
@@ -1242,6 +1253,8 @@ MOVE THIS TO THE NEXT BIT?
 Interestingly, the online menus was not used by participants in any regular or consistent way. However, it did have a trickle down effect. Some trailblazing participants did either browse it, use it to try to solve problems or were referred to it my the facilitators. The patterns that those learners implemented were then remarked upon by other learners and sometimes adopted via peer teaching. -->
 
 <!-- As explored in the literature review, it is difficult to explore this pedagogical approach relation to other similar programmes due to the lack of data on specifics of the learning materials presented to participants. -->
+
+
 
 
 ### Theming the a collection of game design patterns to aid navigation
