update of the data narative

--- a/_posts/thesis_chapters/2024-3-4-Design.md
+++ b/_posts/thesis_chapters/2024-3-4-Design.md
@@ -709,16 +709,13 @@ Activity theory has a broad definition of the concept of tool which in this cont
 
 I had no idea how to code games at the start of this process. But I did have some experience of teaching web coding.
 
-Before engaging with families in P1 in August 2017 I followed tutorials on Mozilla's developer community website and made notes of what parts I found useful. I discovered I could use Mozilla's code playground Thimble [], to house a working javascript based game. Mozilla promoted a professional, open source, javascript library for web game making called Phaser.js. I had used Thimble in earlier work teaching javascript, a snapshot of which is available as PGCE dissertation [@chesterman_webmaking_2015].
-
-
+Before engaging with families in P1 in August 2017 I followed tutorials on Mozilla's developer community website on writing games in javascript. I had used Mozilla's Thimble code playground tool in earlier work teaching javascript, a snapshot of which is available as PGCE dissertation [@chesterman_webmaking_2015]. I discovered I could use  Thimble, to house a working javascript based game. Mozilla promoted a professional, open source, javascript library for web game making called Phaser.js. At this time I also evaluated several online pixel graphics editors and chose Piskelapp.com.
 
 <!-- Thus crux of the conflict is that coding games to create a webpage using a text environment is a complex process. -->
 
+My own motivations for working with open source, authentic game authoring tools (explored in the introduction) brought additional challenge to the process of helping participants build familiarity and competency in tool use compared to using a block coding approach. With little structured support, and given the complexities of learning text based languages, significant areas of contradictions arose between the need of participants to use key tools to create games and their limited skills and experience in using them. In response to that need, on the second session of P1, I adapted a starting code template of a platform game.
 
-My own motivations for working with open source, authentic game authoring tools (explored in the introduction) brought additional challenge to the process of helping participants build familiarity and competency in tool use compared to using a block coding approach.
-
-With little structured support, and given the complexities of learning text based languages, significant areas of contradictions arose between the need of participants to use key tools to create games and their limited skills and experience in using them. In response to that need, on the second session of P1, I adapted a starting code template of a platform game and created various code examples to add functionality requested by participants.
+As the weeks passed, I created various code examples to add functionality requested by participants.
 
 <!-- In early stages, this gulf created a tension between the need to use the tools and text coding processes which often resulted in frustration and paralysis in the activity of game coding. -->
 <!-- At the end of this stage participants showcased their games to students in the foyer of the MMU Brooks building. -->
