--- a/_posts/thesis_chapters/2024-3-4-Design.md
+++ b/_posts/thesis_chapters/2024-3-4-Design.md
@@ -187,6 +187,14 @@ Fig. 4.x Summary of delivery phases and development periods
 [Summary Table of Stages](https://docs.google.com/document/d/1tBoXJWw-aZUcc8EsAvT195CtHLSM468YOCD0sGzOuoA/edit#) -->
 
 
+#### D1: Initial research and development - August and September 2017
+
+From PhD proposal games for a read write world.
+
+* Phaser
+* Thimble
+
+Before engaging with families in P1 in August 2017 I followed tutorials on Mozilla's developer community website on writing games in javascript. I had used Mozilla's Thimble code playground tool in earlier work teaching javascript, a snapshot of which is available as PGCE dissertation [@chesterman_webmaking_2015]. I discovered I could use  Thimble, to house a working javascript based game. Mozilla promoted a professional, open source, javascript library for web game making called Phaser.js. At this time I also evaluated several online pixel graphics editors and chose Piskelapp.com.
 
 #### P1: A phase of exploratory, co-creative game making - October 2017 to March 2018  
 
@@ -203,7 +211,7 @@ Phase one was an extended, exploratory series of game making sessions over sever
 **Tools used:** Phaser javascript library; Thimble code playground; online graphics editor Piskel; a varied set of other graphical and audio asset creation tools.
 
 
-#### D1: Development Stage - May 2018 to December 2018
+#### D2: Development Stage - May 2018 to December 2018
 
 One-off workshops at Mozilla, Feral Vector and Manchester libraries events and to PGCE computer students helped focus and the creation of a “half baked” game template and supporting online and printable resources.
 
@@ -709,7 +717,7 @@ Activity theory has a broad definition of the concept of tool which in this cont
 
 I had no idea how to code games at the start of this process. But I did have some experience of teaching web coding.
 
-Before engaging with families in P1 in August 2017 I followed tutorials on Mozilla's developer community website on writing games in javascript. I had used Mozilla's Thimble code playground tool in earlier work teaching javascript, a snapshot of which is available as PGCE dissertation [@chesterman_webmaking_2015]. I discovered I could use  Thimble, to house a working javascript based game. Mozilla promoted a professional, open source, javascript library for web game making called Phaser.js. At this time I also evaluated several online pixel graphics editors and chose Piskelapp.com.
+
 
 <!-- Thus crux of the conflict is that coding games to create a webpage using a text environment is a complex process. -->
 
