--- a/_posts/thesis_chapters/2024-3-4-Design.md
+++ b/_posts/thesis_chapters/2024-3-4-Design.md
@@ -14,39 +14,43 @@ title: 4. Exploration of the Formative Learning Design Process
     Process](#exploration-of-the-formative-learning-design-process)
     -   [Research Questions - April
         2024](#research-questions---april-2024)
-    -   [A note on style](#a-note-on-style)
     -   [Chapter Introduction](#chapter-introduction)
-    -   [Summary of design evolution](#summary-of-design-evolution)
-        -   [On the details of the
-            design](#on-the-details-of-the-design)
-        -   [Phases and resources of the
-            study](#phases-and-resources-of-the-study)
-            -   [P1: A phase of exploratory, cocreative game
-                making](#p1-a-phase-of-exploratory-cocreative-game-making)
-            -   [D1: Development Stage](#d1-development-stage)
-            -   [P2: Accelerated game making programme (5
-                weeks):](#p2-accelerated-game-making-programme-5-weeks)
-            -   [P4: Adding a process drama to the game making
-                programme: April - May
-                2019](#p4-adding-a-process-drama-to-the-game-making-programme-april---may-2019)
-            -   [P4: Adapting to MakeCode Arcade and more formal
-                settings: Jan 2020 - September
-                2020](#p4-adapting-to-makecode-arcade-and-more-formal-settings-jan-2020---september-2020)
+    -   [Summary of phases and resources of the
+        study](#summary-of-phases-and-resources-of-the-study)
+        -   [D1: Initial research and development - August and September
+            2017](#d1-initial-research-and-development---august-and-september-2017)
+        -   [P1: A phase of exploratory, co-creative game making -
+            October 2017 to March
+            2018](#p1-a-phase-of-exploratory-co-creative-game-making---october-2017-to-march-2018)
+        -   [D2: Development Stage - May 2018 to December
+            2018](#d2-development-stage---may-2018-to-december-2018)
+        -   [P2: Accelerated game making programme - 5 weeks in January
+            to February
+            2019](#p2-accelerated-game-making-programme---5-weeks-in-january-to-february-2019)
+        -   [P3: Adding a process drama to the game making programme: 5
+            weeks in May
+            2019](#p3-adding-a-process-drama-to-the-game-making-programme-5-weeks-in-may-2019)
+        -   [P4: Adapting resources to MakeCode Arcade and more formal
+            settings - November 2019 to September
+            2020](#p4-adapting-resources-to-makecode-arcade-and-more-formal-settings---november-2019-to-september-2020)
     -   [Analysis of dimensions of game making activity using 3GAT
         framework](#analysis-of-dimensions-of-game-making-activity-using-3gat-framework)
         -   [Environmental factors and
             objectives](#environmental-factors-and-objectives)
-        -   [Broader activity system - a novice game making community
-            making games as a learning
-            experience](#broader-activity-system---a-novice-game-making-community-making-games-as-a-learning-experience)
+        -   [Activity system 1 - a novice game making community making
+            games as a learning
+            experience](#activity-system-1---a-novice-game-making-community-making-games-as-a-learning-experience)
             -   [Illustrative vignette on participants activity
                 indicating general activity of
                 participants](#illustrative-vignette-on-participants-activity-indicating-general-activity-of-participants)
-        -   [Constructing a game feature by
-            feature](#constructing-a-game-feature-by-feature)
-        -   [Smaller objectives and actions - Implementing discrete code
-            and design
-            structures](#smaller-objectives-and-actions---implementing-discrete-code-and-design-structures)
+        -   [Activity system 2 - Constructing a game feature by
+            feature](#activity-system-2---constructing-a-game-feature-by-feature)
+            -   [Illustrative use of tools to mediate activity shown in
+                vignette
+                4.x](#illustrative-use-of-tools-to-mediate-activity-shown-in-vignette-4.x)
+            -   [Operations and actions within the system - Implementing
+                discrete code and design
+                structures](#operations-and-actions-within-the-system---implementing-discrete-code-and-design-structures)
             -   [Applying activity theory to surface contradictions and
                 design tensions experienced by participants and
                 facilitator/s](#applying-activity-theory-to-surface-contradictions-and-design-tensions-experienced-by-participants-and-facilitators)
@@ -55,8 +59,8 @@ title: 4. Exploration of the Formative Learning Design Process
     -   [C1 - contradictions involving the use of game programming and
         asset authoring
         tools](#c1---contradictions-involving-the-use-of-game-programming-and-asset-authoring-tools)
-        -   [Narrative descriptions of shifts of tool use from P1 to
-            P2](#narrative-descriptions-of-shifts-of-tool-use-from-p1-to-p2)
+        -   [Narrative descriptions of shifts of tool
+            use](#narrative-descriptions-of-shifts-of-tool-use)
             -   [Illustration of a conflict experienced by
                 families](#illustration-of-a-conflict-experienced-by-families)
         -   [Using a starter game
@@ -77,8 +81,8 @@ title: 4. Exploration of the Formative Learning Design Process
     -   [C2 - Participant conflict associated with project navigation
         and use of
         documentation](#c2---participant-conflict-associated-with-project-navigation-and-use-of-documentation)
-        -   [Narrative pm the evolution of resources during
-            P2](#narrative-pm-the-evolution-of-resources-during-p2)
+        -   [Narrative on the evolution of resources during
+            P2](#narrative-on-the-evolution-of-resources-during-p2)
         -   [Quick Start Cards](#quick-start-cards)
         -   [Code snippet examples](#code-snippet-examples)
         -   [Structuring instructional tutorial
@@ -88,11 +92,7 @@ title: 4. Exploration of the Formative Learning Design Process
     -   [C3 - Responding to tensions and barriers in cultural aspects of
         the game making
         activity](#c3---responding-to-tensions-and-barriers-in-cultural-aspects-of-the-game-making-activity)
-        -   [Design narrative on conflict due to identity clashes and
-            dysfunctional group
-            work](#design-narrative-on-conflict-due-to-identity-clashes-and-dysfunctional-group-work)
-            -   [Social coding processes](#social-coding-processes)
-        -   [REMOVED](#removed)
+        -   [Social coding processes](#social-coding-processes)
         -   [Playtesting as a cultural
             process](#playtesting-as-a-cultural-process)
             -   [Playtesting and embodied participation in the games of
